--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation files('libs/universal-image-loader-1.9.0.jar')
     compile 'com.google.code.gson:gson:2.8.0'
     implementation 'com.android.support:appcompat-v7:26.0.1'
+    implementation 'com.github.dimorinny:floating-text-button:0.0.4'
+    implementation files('libs/joda-time-2.4.jar')
 
 }
 apply plugin: 'com.google.gms.google-services'
