--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.github.dimorinny:floating-text-button:0.0.4'
     implementation files('libs/joda-time-2.4.jar')
-
+    compile 'com.github.chrisbanes:PhotoView:2.0.0'
+    compile 'com.veinhorn.scrollgalleryview:library:1.0.8'
 }
 apply plugin: 'com.google.gms.google-services'
