--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     compile 'com.android.support:support-annotations:27.1.1'
     implementation files('libs/universal-image-loader-1.9.0.jar')
     compile 'com.google.code.gson:gson:2.8.0'
@@ -47,5 +49,10 @@ dependencies {
     implementation files('libs/joda-time-2.4.jar')
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
     compile 'com.veinhorn.scrollgalleryview:library:1.0.8'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
 apply plugin: 'com.google.gms.google-services'
